@@ -39,6 +39,10 @@ Working version
 
 ### Tools:
 
+- #9290: Add a directive to switch off debugging in toplevel.
+  This allows to see optimized bytecode with -dlambda.
+  (Jacques Garrigue, review by Gabriel Scherer)
+
 ### Manual and documentation:
 
 ### Compiler user-interface and warnings:
